# nxtrc

./: .gitignore  GetData.c  Makefile.am  Makefile.in  README.md  Readme.txt  SendDat.nxc  configure  configure.ac  nxtrc.1  nxtrc.c  nxtrc_func.c  nxtrc_func.h
